# hexlet-my-first-workflow

./: README.md  pyproject.toml
.github/workflows/: demo.yml
hexlet_my_first_workflow/: example.py
tests/: test_example.py
